tests/baselines/reference/throwWithoutNewLine2.errors.txt
throwWithoutNewLine2.ts(1,6): error TS1142: Line break not permitted here.
throwWithoutNewLine2.ts(2,1): error TS2304: Cannot find name 'a'.


==== throwWithoutNewLine2.ts (2 errors) ====
    throw
         
!!! error TS1142: Line break not permitted here.
    a;
    ~
!!! error TS2304: Cannot find name 'a'.